--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Explore conosco as possibilidades que a energia solar oferece e descubra como vo
 
             Nosso objetivo é conscientizar e informar sobre as alternativas que podem transformar o futuro, buscando soluções que não apenas atendam às necessidades energéticas, mas também preservem o meio ambiente para as gerações futuras.<br>
             
-            Somos <strong>Thiago Periard Martins</strong> e <strong>Roberta Jaines</strong>, e estamos empenhados em mostrar como as energias renováveis, especialmente a energia solar, podem ser parte fundamental para a construção de um futuro mais limpo e justo para todos.</p>
+            Somos <strong>Thiago Periard Martins - RU 4184827</strong> e <strong>Roberta Jaines Costa - RU 3726209</strong>, e estamos empenhados em mostrar como as energias renováveis, especialmente a energia solar, podem ser parte fundamental para a construção de um futuro mais limpo e justo para todos.</p>
         </div>
 
     </div>
